# esp32_nimbus

./: .gitmodules
firmware/: .gitignore  sdkconfig.defaults
firmware/components/bme680/: CMakeLists.txt  bme680.c
firmware/components/bme680/include/: bme680.h
firmware/main/: CMakeLists.txt  app_main.c  idf_component.yml
